# ntcir

./: Makefile.am  ant.conf  application.conf  configure.ac  create_qqa.sh  gen_qa_terms.awk.sh  gen_qa_terms.sh  prune_question.sh  standford_tagger.sh
include/: ant_link_parts.h  utils.h
scripts/: IR4QA-runchecker2  bm25_tune.sh  eval.sh  find_bestrun.sh  find_chinese.sh  find_miss_topic.sh  gen.sh  split_run.sh
src/: algorithm.cpp  algorithm.h  algorithm_gw.cpp  algorithm_gw.h  algorithm_gw2.cpp  algorithm_gw2.h  algorithm_question_phrase_chinese.cpp  algorithm_question_phrase_chinese.h  application_settings.cpp  application_settings.h  chinese_segmentation.cpp  chinese_segmentation.h  config.cpp  config.h  corpus.cpp  corpus.h  corpus_target.cpp  corpus_target.h  corpus_wikipedia.cpp  corpus_wikipedia.h  google_translator.cpp  google_translator.h  key_term.cpp  key_term.h  language.cpp  language.h  prune_question.cpp  qqa.cpp  qtrec.cpp  qtrec_merge.cpp  query.cpp  query.h  search_engine_ant.cpp  search_engine_ant.h  stop_word.cpp  stop_word.h  sys_file.cpp  topic.cpp  topic.h  topic_set.cpp  (+6 more)
utils/: kmp.cpp  kmp.h  rmxmltags.cpp
